# cwiid

./: .gitignore  AUTHORS  ChangeLog  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  defs.mak.in  index.html
common/include/: .gitignore  app.mak  config.h.in  defs.mak.in  lib.mak  lib.mak.in  plugin.mak
csharp/GLWii/: GLWii.mds  GLWii.userprefs  Packages.mdse
csharp/GTKWii/: GTKWii.mds  GTKWii.userprefs  Packages.mdse
csharp/HeadTracking/: AssemblyInfo.cs  HeadRoom.cs  HeadTracking.mdp  HeadTracking.mds  HeadTracking.pidb  HeadTracking.userprefs  Main.cs  MainWindow.cs
csharp/MonoWii/: AssemblyInfo.cs  Bluetooth.cs  CWiid.cs  MonoWii.mdp  MonoWii.mds  MonoWii.pidb  MonoWii.userprefs  Wiimote.cs
doc/: Makefile.in  wminput
libcwiid/: Makefile.in  bluetooth.c  command.c  connect.c  cwiid.h  cwiid_internal.h  event.c  interface.c  process.c  queue.h  rw.c  state.c  thread.c  util.c
lswm/: .gitignore  Makefile.in  lswm.c
man/: Makefile.in
man/man1/: wmgui.1  wminput.1
python/: Makefile.in  Wiimote.c  cwiidmodule.c  setup.py
wiimote/: Makefile.in  bluetooth.c  command.c  connect.c  event.c  queue.c  queue.h  rw.c  util.c  wiimote.h  wiimote_internal.h
wmdemo/: .gitignore  Makefile.in  main.c  wmdemo.c  wmdemo.py  wmserverdemo.c
wmgui/: .gitignore  Makefile.in  interface.c  main.c  wmgui.glade.bak
wminput/: .gitignore  Makefile.in  README  action_enum.awk  c_plugin.c  c_plugin.h  conf.c  conf.h  lexer.l  main.c  parser.y  py_plugin.c  py_plugin.h  uinput.c  util.c  util.h  wmplugin.h
wminput/configs/: acc_ptr  buttons  ir_ptr  (+3 more)
(+220 files in other folders)
